--- a/buildSrc/gradle.properties
+++ b/buildSrc/gradle.properties
@@ -3,5 +3,7 @@ org.gradle.parallel=false
 org.gradle.configureondemand=false
 org.gradle.jvmargs=-Duser.country=US -Dkotlin.daemon.jvm.options=-Xmx1600m
 
+cache.redirector.enabled=true
+
 #buildSrc.kotlin.repo=https://jcenter.bintray.com
 #buildSrc.kotlin.version=1.1.50
